# dir-diff

./: Cargo.toml  build.rs
src/: cli.rs  lib.rs  main.rs  state.rs
ui/: appwindow.slint
