[package]
name = "dir-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.26"
rfd = "0.15.2"
serde = { version = "1.0.218", features = ["derive",] }
serde_json = "1.0.140"
slint = { version = "1.10.0", default-features = false, features = ["log", "compat-1-2", "std", "backend-winit", "renderer-femtovg"] }

[build-dependencies]
slint-build = "1.10.0"
