[package]
name = "dir-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.6"
image = "0.25.5"
itertools = "0.14.0"
log = "0.4.26"
rfd = "0.15.2"
serde = { version = "1.0.218", features = ["derive",] }
serde_json = "1.0.140"
slint = { version = "1.10.0", default-features = false, features = ["log", "compat-1-2", "std", "backend-winit", "renderer-femtovg"] }

[build-dependencies]
embed-resource = "3.0.2"
image = "0.25.5"
resvg = "0.45.0"
slint-build = "1.10.0"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
